[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kademlia-dynamic"
version = "1.0.0"
description = "Lightweight, async-first Kademlia DHT, with dynamic distance-based cache TTL and switchable JSON/Bencode wire serialization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
license = { text = "MIT" }
authors = [{ name = "f4rsantos", email = "f4rsantos@gmail.com" }]

[project.urls]
Repository = "https://github.com/f4rsantos/kademlia_dynamic"

[tool.setuptools]
packages = ["kademlia_dynamic"]
package-dir = { kademlia_dynamic = "." }
